# alshidata

./: .gitignore  README.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
src/alshidata/google/: Logger.py
