[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alshidata"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Public Domain"
keywords = []
authors = [
  { name = "Samuel Cavazos", email = "samuel@alshival.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Alshivals-Data-Service/alshidata"
Issues = "https://github.com/Alshivals-Data-Service/alshidataissues"
Source = "https://github.com/Alshivals-Data-Service/alshidata"

[tool.hatch.version]
path = "src/pyospackage/__about__.py"