[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
name = "alshidata"
version = "0.1.2"  # Hatch can also dynamically update this if you configure it further
description = "A bunch of data tools by Alshival's Data Service"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Public Domain" }
keywords = []
authors = [
  { name = "Samuel Cavazos", email = "samuel@alshival.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  # List your runtime dependencies here, for example:
  # "numpy>=1.21.0",
]

[project.urls]
Documentation = "https://github.com/Alshivals-Data-Service/alshidata"
Issues = "https://github.com/Alshivals-Data-Service/alshidata/issues"
Source = "https://github.com/Alshivals-Data-Service/alshidata"

[tool.hatch.version]
path = "src/alshidata/__init__.py"
